--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=8281265249:AAH8Oj52LmMaBOYqHxLVEiBYv83kfVSyV6c
-WEBHOOK_URL=https://web-1212.up.railway.app/webhook
+WEBHOOK_URL=https://web-1212.up.railway.app
 ADMIN_ID=5432109876
